@@ -20,7 +20,6 @@
 
 #include <stdio.h>
 #include <string.h>
-#include <stdio.h>
 #include <ctype.h>
 
 /* A bunch of functions in util.c scan strings looking for certain characters.
@@ -34,11 +33,12 @@
 #define T_ESCAPE_XML          (0x20)
 #define T_ESCAPE_LDAP_DN      (0x40)
 #define T_ESCAPE_LDAP_FILTER  (0x80)
+#define T_ESCAPE_JSON         (0x100)
 
 int main(int argc, char *argv[])
 {
     unsigned c;
-    unsigned char flags;
+    unsigned int flags;
 
     printf("/* this file is automatically generated by gen_test_char, "
            "do not edit. \"make include/private/apr_escape_test_char.h\" to regenerate. */\n"
@@ -50,8 +50,9 @@ int main(int argc, char *argv[])
            "#define T_ESCAPE_XML           (%u)\n"
            "#define T_ESCAPE_LDAP_DN       (%u)\n"
            "#define T_ESCAPE_LDAP_FILTER   (%u)\n"
+           "#define T_ESCAPE_JSON          (%u)\n"
            "\n"
-           "static const unsigned char test_char_table[256] = {",
+           "static const apr_uint16_t test_char_table[256] = {",
            T_ESCAPE_SHELL_CMD,
            T_ESCAPE_PATH_SEGMENT,
            T_OS_ESCAPE_PATH,
@@ -59,7 +60,8 @@ int main(int argc, char *argv[])
            T_ESCAPE_URLENCODED,
            T_ESCAPE_XML,
            T_ESCAPE_LDAP_DN,
-           T_ESCAPE_LDAP_FILTER);
+           T_ESCAPE_LDAP_FILTER,
+           T_ESCAPE_JSON);
 
     for (c = 0; c < 256; ++c) {
         flags = 0;
@@ -120,6 +122,11 @@ int main(int argc, char *argv[])
         /* LDAP filter escaping (RFC4515) */
         if (!isprint(c) || strchr("*()\\", c)) {
             flags |= T_ESCAPE_LDAP_FILTER;
+        }
+
+        /* JSON escaping */
+        if (c < 0x20 || strchr("\"\\", c) || c > 0x7F) {
+            flags |= T_ESCAPE_JSON;
         }
 
         printf("%u%c", flags, (c < 255) ? ',' : ' ');
